--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
   <body onload="init()">
     <main>
       <div id="welcomeScreen">
-        <h2>Guess the Number <br />1 - 100</h2>
+        <h2>Advinhe o número <br />1 - 100</h2>
       </div>
 
       <div id="gameArea">
         <section>
-          <h3 id="textOutput">Your Guess:</h3>
+          <h3 id="textOutput">Seu palpite:</h3>
           <input type="number" id="inputBox" min="1" max="100" onchange="compareNumbers()"/>
         </section>
         <section class="stats">
           <div class="info">
-            <p>Number of attempts:</p>
+            <p>Número de tentativas:</p>
             <span id="attempts">0</span>
           </div>
           <div class="info">
-            <p>Your guesses:</p>
+            <p>
+              seus palpites:</p>
             <span id="guesses">0</span>
           </div>
         </section>
